apps/base/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      protocol: TCP
      port: 9696
      targetPort: 9696
  type: ClusterIP
